Fix for Bug 5571 - tags as bulleted list too long

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -595,6 +595,8 @@ input.deleteshelf:active {
 	text-decoration: none;
 }
 
+#tagslist li { display : inline; }
+
 #placehold input.submit:hover,
 #tagsel_span input.submit:hover {
 	color: #990033;
